--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="author" content="Diogo Pacheco" />
 
     <meta property="og:title" content="Diogo Pacheco - Portfolio" />
-    <meta property="og:description" content="DevOps and Cloud Engineer Portfolio" />
+    <meta property="og:description" content="Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="./public/preview.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
