--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Diogo Pacheco - Portfolio</title>
+    <title>Diogo Pacheco - Portfolio.</title>
     <meta name="description" content="Diogo Pacheco's Portfolio - DevOps and Cloud Engineer" />
     <meta name="author" content="Diogo Pacheco" />
 
