Update layout and UI/UX portfolio

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Diogo Pacheco's Portfolio - DevOps and Cloud Engineer" />
     <meta name="author" content="Diogo Pacheco" />
 
-    <meta property="og:title" content="Diogo Pacheco - Portfolio" />
+    <meta property="og:title" content="Diogo Pacheco - Portfolio." />
     <meta property="og:description" content="Portfolio" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="./public/preview.png" />
