refactor: unify portfolio visual style and improve UX

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon.ico" />
 
     <!-- Preload critical resources -->
-    <link rel="preload" href="/photo-dspacheco.jpeg" as="image" type="image/jpeg" fetchpriority="high" />
+    <link rel="preload" href="https://pub-d1507963b1aa465dab3b4e8a1195ac16.r2.dev/public/photo-dspacheco.jpeg" as="image" type="image/jpeg" fetchpriority="high" />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
   </head>
 
