feat: enhance SEO with sitemap, structured data and domain update
Add sitemap.xml, JSON-LD schemas, and migrate domain to diogopacheco.com

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta name="author" content="Diogo Pacheco" />
     <meta name="keywords" content="Diogo Pacheco, Portfolio, Cloud Architect, AWS, CCNA, CyberOps, Network Specialist, Cloud Engineer, DevOps, Software Developer, React, TypeScript" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://portfolio.swift-ai.pt" />
+    <link rel="canonical" href="https://diogopacheco.com" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://portfolio.swift-ai.pt" />
+    <meta property="og:url" content="https://diogopacheco.com" />
     <meta property="og:title" content="Diogo Pacheco - Portfolio | Cloud Architect & Software Developer" />
     <meta property="og:description" content="Diogo Pacheco's Portfolio - AWS Cloud Architect certified, CCNA & CyberOps Certified. Software development experience through various projects. Expertise in cloud infrastructure, network security, and modern technologies." />
-    <meta property="og:image" content="https://portfolio.swift-ai.pt/preview.png" />
+    <meta property="og:image" content="https://r2.diogopacheco.com/public/preview.webp" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="Diogo Pacheco Portfolio Preview" />
@@ -28,7 +28,7 @@
     <meta name="twitter:creator" content="@dspacheco132" />
     <meta name="twitter:title" content="Diogo Pacheco - Portfolio | Cloud Architect & Software Developer" />
     <meta name="twitter:description" content="Diogo Pacheco's Portfolio - AWS Cloud Architect certified, CCNA & CyberOps Certified. Software development experience through projects. Expertise in cloud infrastructure and security." />
-    <meta name="twitter:image" content="https://portfolio.swift-ai.pt/preview.png" />
+    <meta name="twitter:image" content="https://r2.diogopacheco.com/public/preview.webp" />
     <meta name="twitter:image:alt" content="Diogo Pacheco Portfolio Preview" />
 
     <!-- Favicon -->
@@ -38,6 +38,81 @@
     <!-- Preload critical resources -->
         <link rel="preload" href="https://r2.diogopacheco.com/public/photo-dspacheco.jpeg" as="image" type="image/jpeg" fetchpriority="high" />
     <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Diogo Pacheco",
+      "jobTitle": "Cloud Architect & Software Developer",
+      "url": "https://diogopacheco.com",
+      "image": "https://r2.diogopacheco.com/public/photo-dspacheco.jpeg",
+      "sameAs": [
+        "https://twitter.com/dspacheco132",
+        "https://github.com/dspacheco132"
+      ],
+      "knowsAbout": [
+        "AWS Cloud Architecture",
+        "Network Security",
+        "DevOps",
+        "Software Development",
+        "React",
+        "TypeScript",
+        "Python",
+        "Docker",
+        "Kubernetes",
+        "Terraform"
+      ],
+      "hasCredential": [
+        {
+          "@type": "EducationalOccupationalCredential",
+          "credentialCategory": "Professional Certification",
+          "name": "AWS Cloud Architect",
+          "recognizedBy": {
+            "@type": "Organization",
+            "name": "Amazon Web Services"
+          }
+        },
+        {
+          "@type": "EducationalOccupationalCredential",
+          "credentialCategory": "Professional Certification",
+          "name": "CCNA",
+          "recognizedBy": {
+            "@type": "Organization",
+            "name": "Cisco"
+          }
+        },
+        {
+          "@type": "EducationalOccupationalCredential",
+          "credentialCategory": "Professional Certification",
+          "name": "CyberOps",
+          "recognizedBy": {
+            "@type": "Organization",
+            "name": "Cisco"
+          }
+        }
+      ]
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Diogo Pacheco - Portfolio",
+      "url": "https://diogopacheco.com",
+      "description": "Portfolio of Diogo Pacheco - AWS Cloud Architect certified, CCNA & CyberOps Certified. Software development experience through various projects.",
+      "author": {
+        "@type": "Person",
+        "name": "Diogo Pacheco"
+      },
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://diogopacheco.com/projects?search={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
   </head>
 
   <body>
